[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "porkchop"
version = "0.1.0"
description = "Interplanetary transfer-window analysis: Lambert solver, planetary ephemerides, porkchop plots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
porkchop = "porkchop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "NPY"]
ignore = ["E402"]  # plot.py must set the Agg backend before importing pyplot

[tool.ruff.lint.per-file-ignores]
"src/porkchop/ephemeris.py" = ["E501"]  # keep the JPL element table rows intact
